# Nova-Rewards

./: .env.mainnet  .env.testnet  .env.vercel.example  .gitignore  CI_FIXES.md  CI_FIXES_SUMMARY.md  CI_FIX_SUMMARY.md  COMBINED_PR_DESCRIPTION.md  CONFLICT_RESOLUTION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Design System Foundations.txt  IMPLEMENTATION_SUMMARY.md  ISSUE_287_SUMMARY.md  MONITORING_IMPLEMENTATION.md  MUTATION_TESTING_CHECKLIST.md  MUTATION_TESTING_INDEX.md  MUTATION_TESTING_REPORT.md  MUTATION_TESTING_RESULTS.md  MUTATION_TESTING_SETUP.md  MUTATION_TESTING_SUMMARY.md  Makefile-devops  PR_DESCRIPTION.md  PR_DESCRIPTION_#592.md  PR_DESCRIPTION_#629.md  PR_DESCRIPTION_#658.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  Uidesign  VERCEL_SETUP.md  VERCEL_SETUP_INSTRUCTIONS.md  WEAK_TESTS_RECOMMENDATIONS.md  compoment.txt  componentlibary.txt  rust-toolchain.toml
contracts/: Cargo.toml  README.md
contracts/admin_roles/: Cargo.toml
contracts/admin_roles/src/: lib.rs
contracts/admin_roles/tests/: admin_tests.rs
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/contract_state/: Cargo.toml
contracts/contract_state/src/: lib.rs
contracts/distribution/: Cargo.toml
contracts/distribution/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_calculate_payout.rs  fuzz_reward_distribution.rs  fuzz_staking.rs  fuzz_token_transfer.rs  fuzz_vesting.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/integration/: Cargo.toml
contracts/integration/src/: lib.rs
contracts/integration/test_snapshots/: test_admin_mint_fund_vest_lifecycle.1.json  test_admin_operates_all_contracts.1.json  test_admin_roles_double_init_blocked.1.json  test_admin_transfer_events_sequence.1.json  test_all_contract_events_in_one_env.1.json  test_burn_then_deposit_net_balance.1.json  test_credit_fails_when_referral_pool_empty.1.json  test_cross_contract_events_both_emitted.1.json  test_duplicate_referral_rejected.1.json  test_full_onboarding_flow.1.json  test_interleaved_operations_state_consistency.1.json  test_mint_then_deposit_state_consistency.1.json  test_multi_user_deposit_then_full_withdrawal.1.json  test_multiple_vesting_schedules_independent.1.json  test_multisig_config_update.1.json  test_overdraft_rejected_pool_unchanged.1.json  test_partial_withdrawal_leaves_correct_remainder.1.json  test_pool_balances_are_independent.1.json  test_pool_double_init_blocked.1.json  test_pool_state_unchanged_after_failed_withdraw.1.json  test_referral_state_unchanged_after_failed_credit.1.json  test_self_referral_rejected.1.json  test_state_survives_simulated_upgrade.1.json  test_two_step_admin_transfer_completes.1.json  test_vesting_cliff_blocks_early_release.1.json  test_vesting_double_init_blocked.1.json  test_vesting_state_unchanged_after_failed_release.1.json  test_zero_deposit_rejected_pool_unchanged.1.json
contracts/integration/tests/: admin_roles_integration.rs  referral_vesting_integration.rs  token_pool_integration.rs  upgrade_recovery_integration.rs
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/src/: lib.rs  multi_contract.rs  state_consistency.rs
contracts/integration_tests/tests/: integration_test.rs
contracts/nova-rewards/: Cargo.toml
contracts/nova-rewards/src/: lib.rs
contracts/nova-rewards/tests/: daily_limit_test.rs  fixtures.rs  precision_test.rs  recovery.rs  staking_mutations_test.rs  staking_test.rs  test_helpers.rs  upgrade.rs  utils_test.rs
contracts/nova_token/: Cargo.toml
contracts/nova_token/src/: lib.rs
contracts/redemption/: Cargo.toml
contracts/referral/: Cargo.toml
contracts/reward_pool/: Cargo.toml  TODO.md  tests.harness.rs
contracts/vesting/: Cargo.toml
(+1151 files in other folders)
