[workspace]
resolver = "2"
members = [
    "nova_token",
    "reward_pool",
    "admin_roles",
    "vesting",
    "referral",
    "nova-rewards",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
