[package]
name = "nova-rewards-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
nova-rewards = { path = "../nova-rewards" }
nova_token = { path = "../nova_token" }
distribution = { path = "../distribution" }
vesting = { path = "../vesting" }

[[bin]]
name = "fuzz_calculate_payout"
path = "fuzz_targets/fuzz_calculate_payout.rs"
test = false
doc = false

[[bin]]
name = "fuzz_staking"
path = "fuzz_targets/fuzz_staking.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vesting"
path = "fuzz_targets/fuzz_vesting.rs"
test = false
doc = false

[[bin]]
name = "fuzz_token_transfer"
path = "fuzz_targets/fuzz_token_transfer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reward_distribution"
path = "fuzz_targets/fuzz_reward_distribution.rs"
test = false
doc = false
