[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
soroban-sdk   = { version = "22.0.0", features = ["testutils"] }
nova_token    = { path = "../nova_token" }
reward_pool   = { path = "../reward_pool" }
referral      = { path = "../referral" }
vesting       = { path = "../vesting" }
admin_roles   = { path = "../admin_roles" }
